--- a/build.yaml
+++ b/build.yaml
@@ -13,6 +13,10 @@
 #
 ---
 include:
-  - board: planck_rev6
-  - board: corneish_zen_v2_left
-  - board: corneish_zen_v2_right
+  # - board: planck_rev6
+  # - board: corneish_zen_v2_left
+  # - board: corneish_zen_v2_right
+  - board: nice_nano_v2
+    shield: cradio_left
+  - board: nice_nano_v2
+    shield: cradio_right
