--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -2,3 +2,7 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=2700000
 
 CONFIG_ZMK_MOUSE=y
+
+# Combo config
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6 
+CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=3 
