--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -6,3 +6,5 @@ CONFIG_ZMK_MOUSE=y
 # Combo config
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=6 
 CONFIG_ZMK_COMBO_MAX_KEYS_PER_COMBO=3 
+
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
